--- a/admin/package.json
+++ b/admin/package.json
@@ -7,7 +7,9 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "build": "next build",
+    "start": "next start"
   },
   "dependencies": {
     "axios": "^1.7.7",
