--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,12 +7,8 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview",
-  
-  
-
-
-  },
+    "preview": "vite preview"
+ },
   "dependencies": {
     "axios": "^1.7.7",
     "react": "^18.3.1",
