--- a/admin/package.json
+++ b/admin/package.json
@@ -7,9 +7,7 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview",
-    "build": "next build",
-    "start": "next start"
+    "preview": "vite preview"
   },
   "dependencies": {
     "axios": "^1.7.7",
